# modelbench

./: Dockerfile  pyproject.toml
plugins/ai2/: pyproject.toml
plugins/ai2/beaker/: olmo2-13b.yaml  olmo2-32b.yaml  olmo2-7b.yaml
plugins/ai2/modelgauge/suts/: ai2_vllm.py
results/: benchmark_record-general_purpose_ai_chat_benchmark-1.0-en_us-demo-default-OLMo-2-0325-32B-Instruct.json
