[tool.poetry]
name = "modelgauge-ai2"
version = "1.0.0"
description = ""
authors = ["Lester James V. Miranda <ljm@allenai.org>"]
packages = [{include = "modelgauge"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
